--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,3 +3,4 @@
 
 libdir: "{{ 'lib64' if ansible_os_family == 'RedHat' else 'lib' }}"
 include_dir: "{{ '/etc/nrpe.d' if ansible_os_family == 'RedHat' else '/etc/nagios/nrpe.d' }}"
+service: "{{ 'nrpe' if ansible_os_family == 'RedHat' else 'nagios-nrpe-server' }}"
